sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var nbValue = getValueCount();
  
  for(i <- 0 to nbValue) {
    if( !(isSmaller(i,i+1)) ){
      swap(i,j);
    }
  }
}
